reset clock between tests